--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-enyo-builder",
   "description": "build an enyo component easily",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "https://github.com/toxigenicpoem/grunt-enyo-builder",
   "author": {
     "name": "Derek M. Anderson",
@@ -26,12 +26,16 @@
   "scripts": {
     "test": "grunt test"
   },
+  "Dependencies": {
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-git": "~0.2.8",
+    "grunt-exec": "0.4.5",
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
     "grunt": "~0.4.5",
-    "grunt-git": "~0.2.8"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
