--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "grunt-enyo-builder",
-  "description": "build an enyo component easily",
-  "version": "0.1.5",
-  "homepage": "https://github.com/toxigenicpoem/grunt-enyo-builder",
-  "author": {
-    "name": "Derek M. Anderson",
-    "email": "toxigenicpoem@gmail.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/toxigenicpoem/grunt-enyo-builder.git"
-  },
-  "bugs": {
-    "url": "https://github.com/toxigenicpoem/grunt-enyo-builder/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/toxigenicpoem/grunt-enyo-builder/blob/master/LICENSE-MIT"
+    "name": "grunt-enyo-builder",
+    "description": "build an enyo component easily",
+    "version": "0.1.5",
+    "homepage": "https://github.com/toxigenicpoem/grunt-enyo-builder",
+    "author": {
+        "name": "Derek M. Anderson",
+        "email": "toxigenicpoem@gmail.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/toxigenicpoem/grunt-enyo-builder.git"
+    },
+    "bugs": {
+        "url": "https://github.com/toxigenicpoem/grunt-enyo-builder/issues"
+    },
+    "licenses": [
+        {
+            "type": "MIT",
+            "url": "https://github.com/toxigenicpoem/grunt-enyo-builder/blob/master/LICENSE-MIT"
     }
   ],
-  "engines": {
-    "node": ">= 0.8.0"
-  },
-  "scripts": {
-    "test": "grunt test"
-  },
-  "Dependencies": {
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-git": "~0.2.8",
-    "grunt-exec": "0.4.5",
-  },
-  "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5",
-  },
-  "peerDependencies": {
-    "grunt": "~0.4.5"
-  },
-  "keywords": [
+    "engines": {
+        "node": ">= 0.8.0"
+    },
+    "scripts": {
+        "test": "grunt test"
+    },
+    "Dependencies": {
+        "grunt-contrib-clean": "^0.5.0",
+        "grunt-git": "~0.2.8",
+        "grunt-exec": "~0.4.5"
+    },
+    "devDependencies": {
+        "grunt-contrib-jshint": "^0.9.2",
+        "grunt-contrib-clean": "^0.5.0",
+        "grunt-contrib-nodeunit": "^0.3.3",
+        "grunt": "~0.4.5"
+    },
+    "peerDependencies": {
+        "grunt": "~0.4.5"
+    },
+    "keywords": [
     "gruntplugin"
   ]
 }
