--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "grunt-enyo-builder",
     "description": "build an enyo component easily",
-    "version": "0.1.7",
+    "version": "0.1.8",
     "homepage": "https://github.com/toxigenicpoem/grunt-enyo-builder",
     "author": {
         "name": "Derek M. Anderson",
@@ -26,11 +26,7 @@
     "scripts": {
         "test": "grunt test"
     },
-    "Dependencies": {
-        "grunt-contrib-clean": "^0.5.0",
-        "grunt-git": "~0.2.8",
-        "grunt-exec": "~0.4.5"
-    },
+    "dependencies": {},
     "devDependencies": {
         "grunt-contrib-jshint": "^0.9.2",
         "grunt-contrib-clean": "^0.5.0",
@@ -38,7 +34,10 @@
         "grunt": "~0.4.5"
     },
     "peerDependencies": {
-        "grunt": "~0.4.5"
+        "grunt": "~0.4.5",
+        "grunt-contrib-clean": "^0.5.0",
+        "grunt-git": "~0.2.8",
+        "grunt-exec": "~0.4.5"
     },
     "keywords": [
     "gruntplugin"
