--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "grunt": "~0.4.5",
         "grunt-contrib-clean": "^0.5.0",
         "grunt-git": "~0.2.8",
-        "grunt-exec": "~0.4.5"
+        "grunt-exec": "~0.4.5",
+        "grunt-contrib-symlink": "~0.3.0"
     },
     "keywords": [
     "gruntplugin"
